crates/solidity/testing/snapshots/bindings_output/yul/fallback_params/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[ input.sol:2:13 ]
   │
 2 │ ╭─▶     fallback(bytes calldata input) external payable returns (bytes memory output) {
   ┆ ┆   
 7 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     fallback(bytes calldata input) external payable returns (bytes memory output) {
   │     ────┬───  
   │         ╰───── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ ╭─▶ contract Test {
   ┆ ┆   
 8 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
